platform/runtime/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana-on-prem.zavestudios.com
  gateways:
    - istio-gateway/public-ingressgateway
  http:
    - route:
        - destination:
            host: monitoring-grafana.monitoring.svc.cluster.local
            port:
              number: 80
